--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -271,37 +271,37 @@
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP10 -->
 						<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 10</font></center><br></td>
-						<td bgcolor="#009700"><br><center><font style="font-weight:bolder;font-size:x-large;">1504</font></center><br></td>
-						<td bgcolor="#009700"><br><center><font style="font-weight:bolder;font-size:x-large;">1506</font></center><br></td>
-						<td bgcolor="#4FC34F"><br><center><font style="font-weight:bolder;font-size:x-large;">1519</font></center><br></td>
-						<td bgcolor="#4FC34F"><br><center><font style="font-weight:bolder;font-size:x-large;">1520</font></center><br></td>
+						<td bgcolor={{codes.0.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.0.0}}</font></center><br></td>
+						<td bgcolor={{codes.1.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.1.0}}</font></center><br></td>
+						<td bgcolor={{codes.2.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.2.0}}</font></center><br></td>
+						<td bgcolor={{codes.3.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.3.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
 						<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 30</font></center><br></td>
-						<td bgcolor="#DADA3F"><br><center><font style="font-weight:bolder;font-size:x-large;">1502</font></center><br></td>
-						<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1507</font></center><br></td>
+						<td bgcolor={{codes.4.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.4.0}}</font></center><br></td>
+						<td bgcolor={{codes.5.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.5.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 40</font></center><br></td>
-					<td bgcolor="#90e893"><br><center><font style="font-weight:bolder;font-size:x-large;">1501</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1515</font></center><br></td>
+					<td bgcolor={{codes.6.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.6.0}}</font></center><br></td>
+					<td bgcolor={{codes.7.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.7.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 50</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1508</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1532</font></center><br></td>
+					<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.8.0}}</font></center><br></td>
+					<td bgcolor={{codes.9.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.9.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP60 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 60</font></center><br></td>
-					<td bgcolor="#009700"><br><center><font style="font-weight:bolder;font-size:x-large;">1509</font></center><br></td>
+					<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.10.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP70 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 70</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1514</font></center><br></td>
+					<td bgcolor={{codes.11.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.11.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP80 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 80</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1510</font></center><br></td>
+					<td bgcolor={{codes.12.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.12.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP30 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 90</font></center><br></td>
@@ -309,11 +309,11 @@
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP100 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 100</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1503</font></center><br></td>
+					<td bgcolor={{codes.13.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.13.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP110 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 110</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1511</font></center><br></td>
+					<td bgcolor={{codes.14.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.14.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP120 -->
 					<td bgcolor="#b0aea9" style="font-size:10px;width:15%;"><br><center><font style="font-weight:bolder;font-size:large;">OP 120</font></center><br></td>
@@ -347,7 +347,7 @@
 					<td><br><center><font style="font-weight:bolder;font-size:x-large;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP90 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1513</font></center><br></td>
+					<td bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.29.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP80 -->
 					<td><br><center><font style="font-weight:bolder;font-size:x-large;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
@@ -356,7 +356,7 @@
 					<td><br><center><font style="font-weight:bolder;font-size:x-large;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP120 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1533</font></center><br></td>
+					<td bgcolor={{codes.30.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.30.0}}</font></center><br></td>
 				</tr></table></center>
 			</div>
 			<div class="frameo">  <!-- MainLine Production-->
@@ -364,39 +364,39 @@
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:x-large;">OffLine</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP10 -->
-						<td bgcolor="#EC7371"><br><center><font style="font-weight:bolder;font-size:x-large;">1519</font></center><br></td>
-						<td bgcolor="#DADA3F"><br><center><font style="font-weight:bolder;font-size:x-large;">1521</font></center><br></td>
-						<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1522</font></center><br></td>
-						<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1523</font></center><br></td>
+						<td bgcolor={{codes.15.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.15.0}}</font></center><br></td>
+						<td bgcolor={{codes.16.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.16.0}}</font></center><br></td>
+						<td bgcolor={{codes.17.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.17.0}}</font></center><br></td>
+						<td bgcolor={{codes.18.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.18.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
-						<td bgcolor="#DADA3F"><br><center><font style="font-weight:bolder;font-size:x-large;">1539</font></center><br></td>
-						<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1540</font></center><br></td>
+						<td bgcolor={{codes.19.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.19.0}}</font></center><br></td>
+						<td bgcolor={{codes.20.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.20.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
-					<td bgcolor="#90e893"><br><center><font style="font-weight:bolder;font-size:x-large;">1524</font></center><br></td>
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1525</font></center><br></td>
+					<td bgcolor={{codes.21.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.21.0}}</font></center><br></td>
+					<td bgcolor={{codes.22.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.22.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1538</font></center><br></td>
+					<td bgcolor={{codes.23.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.23.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP60 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1541</font></center><br></td>
+					<td bgcolor={{codes.24.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.24.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP70 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1531</font></center><br></td>
+					<td bgcolor={{codes.25.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.25.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP80 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1527</font></center><br></td>
+					<td bgcolor={{codes.26.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.26.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP30 -->
 					<td><br><center><font style="font-weight:bolder;font-size:x-large;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP100 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1531</font></center><br></td>
+					<td bgcolor={{codes.27.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.27.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP110 -->
-					<td bgcolor="#4fe854"><br><center><font style="font-weight:bolder;font-size:x-large;">1528</font></center><br></td>
+					<td bgcolor={{codes.28.2}}><br><center><font style="font-weight:bolder;font-size:x-large;">{{codes.28.0}}</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP120 -->
 					<td><br><center><font style="font-weight:bolder;font-size:x-large;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
