--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -169,8 +169,8 @@
 										<!-- <li><a href="{{request.session.local_toggle}}/auto_updater">Auto Updater</a></li> 
 										<li><a href="{{request.session.local_toggle}}/trained_email">Trained Email</a></li>   -->
 										<!-- <li><a href="{{request.session.local_toggle}}/epv_cleanup">EPV Clean</a></li>
-										<li><a href="{{request.session.local_toggle}}/epv_checks_update">EPV Check Update</a></li>
-										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>
+										<li><a href="{{request.session.local_toggle}}/epv_checks_update">EPV Check Update</a></li> -->
+										<li><a href="{{request.session.local_toggle}}/cell_track_9341">9341 Cell</a></li>  
 									</ul>  
 								</li>
 
