update on 10R tracking

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -270,7 +270,8 @@
 		<div class="wrapper_main">
 			<div class="mainset">  <!-- MainLine Production-->
 				<center><table id="prodwk"><tr> <!-- OP60 -->
-					<td bgcolor="#DCDCDC"><br><center><font style="font-weight:bolder;font-size:120%;">10R80 Cell Track</font></center><br></td>
+					<td bgcolor="#DCDCDC"><br><center><font style="font-weight:bolder;font-size:120%;"><u>10R80 Cell Track</u></font>
+						<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font></center><br></td>
 				</tr></table></center><br>
 			</div>
 			<div class="frame1">  <!-- MainLine Production-->
@@ -280,50 +281,75 @@
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">Mainline</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP10 -->
-						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 10</font></center><br></td>
-						<td bgcolor={{codes.0.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.0.0}}</font></center><br></td>
-						<td bgcolor={{codes.1.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.1.0}}</font></center><br></td>
-						<td bgcolor={{codes.2.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.2.0}}</font></center><br></td>
-						<td bgcolor={{codes.3.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.3.0}}</font></center><br></td>
+						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 10</font>
+							<font style="font-weight:bolder;font-size:85%;"><br>({{op.10}})</font></center></td>
+						<td bgcolor={{codes.0.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.0.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.0.3}})</font></center><br></td>
+							<td bgcolor={{codes.1.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.1.0}}</font>
+								<font style="font-weight:bolder;font-size:70%;">({{codes.1.3}})</font></center><br></td>
+								<td bgcolor={{codes.2.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.2.0}}</font>
+									<font style="font-weight:bolder;font-size:70%;">({{codes.2.3}})</font></center><br></td>
+									<td bgcolor={{codes.3.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.3.0}}</font>
+										<font style="font-weight:bolder;font-size:70%;">({{codes.3.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
-						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font></center><br></td>
-						<td bgcolor={{codes.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.4.0}}</font></center><br></td>
-						<td bgcolor={{codes.5.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.5.0}}</font></center><br></td>
+						<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 30</font>
+							<font style="font-weight:bolder;font-size:85%;"><br>({{op.30}})</font></center></td>
+						<td bgcolor={{codes.4.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.4.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.4.3}})</font></center><br></td>
+						<td bgcolor={{codes.5.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.5.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.5.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font></center><br></td>
-					<td bgcolor={{codes.6.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.6.0}}</font></center><br></td>
-					<td bgcolor={{codes.7.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.7.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 40</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.40}})</font></center></td>
+					<td bgcolor={{codes.6.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.6.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.6.3}})</font></center><br></td>
+					<td bgcolor={{codes.7.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.7.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.7.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 50</font></center><br></td>
-					<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.8.0}}</font></center><br></td>
-					<td bgcolor={{codes.9.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.9.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 50</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.50}})</font></center></td>
+					<td bgcolor={{codes.8.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.8.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.8.3}})</font></center><br></td>
+					<td bgcolor={{codes.9.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.9.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.9.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP60 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 60</font></center><br></td>
-					<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.10.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 60</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.60}})</font></center></td>
+					<td bgcolor={{codes.10.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.10.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.10.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP70 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 70</font></center><br></td>
-					<td bgcolor={{codes.11.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.11.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 70</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.70}})</font></center></td>
+					<td bgcolor={{codes.11.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.11.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.11.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP80 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 80</font></center><br></td>
-					<td bgcolor={{codes.12.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.12.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 80</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.80}})</font></center></td>
+					<td bgcolor={{codes.12.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.12.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.12.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP30 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 90</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 90</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.90}})</font></center></td>
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP100 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 100</font></center><br></td>
-					<td bgcolor={{codes.13.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.13.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 100</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.100}})</font></center></td>
+					<td bgcolor={{codes.13.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.13.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.13.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP110 -->
-					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 110</font></center><br></td>
-					<td bgcolor={{codes.14.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.14.0}}</font></center><br></td>
+					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 110</font>
+						<font style="font-weight:bolder;font-size:85%;"><br>({{op.110}})</font></center></td>
+					<td bgcolor={{codes.14.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.14.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.14.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP120 -->
 					<td bgcolor="#b0aea9" style="font-size:12px;width:15%;"><br><center><font style="font-weight:bolder;font-size:100%;">OP 120</font></center><br></td>
@@ -356,8 +382,9 @@
 				<center><table id="noneline"><tr> <!-- OP80 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
-				<center><table id="mainline"><tr> <!-- OP90 -->
-					<td bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.29.0}}</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP110 -->
+					<td bgcolor={{codes.29.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.29.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.29.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP80 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
@@ -365,8 +392,9 @@
 				<center><table id="noneline"><tr> <!-- OP80 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
-				<center><table id="mainline"><tr> <!-- OP120 -->
-					<td bgcolor={{codes.30.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.30.0}}</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP110 -->
+					<td bgcolor={{codes.30.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.30.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.30.3}})</font></center><br></td>
 				</tr></table></center>
 			</div>
 			<div class="frameo">  <!-- MainLine Production-->
@@ -374,39 +402,53 @@
 					<td bgcolor="#bdb4b3"><br><center><font style="font-weight:bolder;font-size:100%;">OffLine</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP10 -->
-						<td bgcolor={{codes.15.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.15.0}}</font></center><br></td>
-						<td bgcolor={{codes.16.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.16.0}}</font></center><br></td>
-						<td bgcolor={{codes.17.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.17.0}}</font></center><br></td>
-						<td bgcolor={{codes.18.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.18.0}}</font></center><br></td>
+					<td bgcolor={{codes.15.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.15.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.15.3}})</font></center><br></td>
+						<td bgcolor={{codes.16.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.16.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.16.3}})</font></center><br></td>
+						<td bgcolor={{codes.17.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.17.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.17.3}})</font></center><br></td>
+						<td bgcolor={{codes.18.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.18.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.18.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP30 -->
-						<td bgcolor={{codes.19.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.19.0}}</font></center><br></td>
-						<td bgcolor={{codes.20.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.20.0}}</font></center><br></td>
+					<td bgcolor={{codes.19.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.19.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.19.3}})</font></center><br></td>
+						<td bgcolor={{codes.20.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.20.0}}</font>
+							<font style="font-weight:bolder;font-size:70%;">({{codes.20.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP40 -->
-					<td bgcolor={{codes.21.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.21.0}}</font></center><br></td>
-					<td bgcolor={{codes.22.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.22.0}}</font></center><br></td>
+					<td bgcolor={{codes.21.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.21.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.21.3}})</font></center><br></td>
+					<td bgcolor={{codes.22.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.22.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.22.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP50 -->
-					<td bgcolor={{codes.23.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.23.0}}</font></center><br></td>
+					<td bgcolor={{codes.23.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.23.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.23.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP60 -->
-					<td bgcolor={{codes.24.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.24.0}}</font></center><br></td>
+					<td bgcolor={{codes.24.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.24.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.24.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP70 -->
-					<td bgcolor={{codes.25.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.25.0}}</font></center><br></td>
+					<td bgcolor={{codes.25.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.25.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.25.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP80 -->
-					<td bgcolor={{codes.26.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.26.0}}</font></center><br></td>
+					<td bgcolor={{codes.26.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.26.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.26.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP30 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
 				</tr></table></center>
-				<center><table id="mainline"><tr> <!-- OP100 -->
-					<td bgcolor={{codes.27.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.27.0}}</font></center><br></td>
+				<center><table id="mainline"><tr> <!-- OP110 -->
+					<td bgcolor={{codes.27.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.27.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.27.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="mainline"><tr> <!-- OP110 -->
-					<td bgcolor={{codes.28.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.28.0}}</font></center><br></td>
+					<td bgcolor={{codes.28.2}}><br><center><font style="font-weight:bolder;font-size:100%;">{{codes.28.0}}</font>
+						<font style="font-weight:bolder;font-size:70%;">({{codes.28.3}})</font></center><br></td>
 				</tr></table></center>
 				<center><table id="noneline"><tr> <!-- OP120 -->
 					<td><br><center><font style="font-weight:bolder;font-size:100%;">&nbsp;&nbsp;&nbsp;&nbsp;</font></center><br></td>
@@ -434,8 +476,14 @@
 				<center><table id="legend"><tr> <!-- OP80 -->
 					<td bgcolor="#F6F687"><br><center><font style="font-weight:bolder;font-size:75%;">25%</font></center><br></td>
 				</tr></table></center>
+                <center><table id="legend"><tr> <!-- OP80 -->
+					<td bgcolor="#F7BA84"><br><center><font style="font-weight:bolder;font-size:75%;">10%</font></center><br></td>
+				</tr></table></center>
+                <center><table id="legend"><tr> <!-- OP80 -->
+					<td bgcolor="#EC7371"><br><center><font style="font-weight:bolder;font-size:75%;">> 0%</font></center><br></td>
+				</tr></table></center>
 				<center><table id="legend"><tr> <!-- OP80 -->
-					<td bgcolor="#EC7371"><br><center><font style="font-weight:bolder;font-size:75%;">0%</font></center><br></td>
+					<td bgcolor="#B7B7B7"><br><center><font style="font-weight:bolder;font-size:75%;">0%</font></center><br></td>
 				</tr></table></center>
 
 			</div>
