--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -1,8 +1,21 @@
 
 <html>
+	{% if request.session.track_history != 1 %}
 	<meta http-equiv="refresh" content="10; url={{request.session.local_toggle}}/cell_track_9341/" />
+	{% endif %}
 <head>
 <!-- Test  -->
+<script language="javascript" type="text/javascript"> 
+	function windowClose() { 
+	window.open('','_parent',''); 
+	window.close();
+	} 
+</script>
+
+	<script>
+		function track_history(){location.replace("{{request.session.local_toggle}}/cell_track_9341_history_on")}
+		function track_return(){location.replace("{{request.session.local_toggle}}/cell_track_9341_history_off")}
+	</script>
  <!-- Format for Background image -->
 <style type="text/css">
 
@@ -98,7 +111,7 @@
   <!-- <link rel="stylesheet" href="/static/style_1/grid_kiosk_job_production2.css?{{TCUR}}">    -->
 
 	<style type="text/css">
-		.mainset{color:black;text-align:center;float:left;width:85%}
+		.mainset{color:black;text-align:center;float:left;width:95%}
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
 		
 		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
@@ -184,7 +197,7 @@
 	#prodwk {
 		font-family: Arial, Helvetica, sans-serif;
 		border-collapse: collapse;
-		width: 30%;
+		width: 70%;
 	}
 	#prodwk td, #prodwk th {
 		border: 1px solid rgb(0, 0, 0);
@@ -270,8 +283,36 @@
 		<div class="wrapper_main">
 			<div class="mainset">  <!-- MainLine Production-->
 				<center><table id="prodwk"><tr> <!-- OP60 -->
-					<td bgcolor="#DCDCDC"><br><center><font style="font-weight:bolder;font-size:120%;"><u>10R80 Cell Track</u></font>
-						<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font></center><br></td>
+					<td bgcolor="#DCDCDC">
+
+<!-- Put the History Date Call up section here *************************************************************************** -->
+{% if request.session.track_history = 1 %}
+</td></tr>
+<tr>
+<form action="" method="post">{% csrf_token %}
+	<td bgcolor="#DCDCDC"><br><center><font style="font-weight:bolder;font-size:120%;"><u>History &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_date}}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{request.session.track_shift}}</u></font><br>
+	<label for="shift"><font style="font-weight:bolder;font-size:70%;"></font><u><b>Shift:</u></b></u>&nbsp;&nbsp;&nbsp;</label>
+		<select style="font-size:12px;height:30px;" id="shift" name="shift" required>
+		<option value=""></option>
+		<option value="Mid">Mid</option>
+		<option value="Day">Day</option>
+		<option value="Aft">Aft</option>
+		</select>
+		<b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<u>START DATE</b></u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input style="font-size:12px;height:30px;" type="date" name="date_st" value={{Curr}}>
+		<button style="background-color: #999999;border-radius: 10px;width:90px;height:30px;">Submit</button>
+		&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+		<button  style="background-color: #585858;border-radius: 10px;width:90px;height:30px;color:#d8ff49;font-size:12px;" onclick="track_return()">Return to Track</button>
+	</td>
+</form>
+
+{% else %}<br><center><font style="font-weight:bolder;font-size:120%;"><u>10R80 Cell Track</u></font>
+	<font style="font-weight:bolder;font-size:85%;">(End of Shift Prediction)</font>
+	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button  style="background-color: #585858;border-radius: 10px;height:70%;font-size:10px;color:#d8ff49" onclick="track_history()">History</button> </center>
+	<br></td></tr>
+{% endif %}
+<!--   *****************************************************************************************************************    -->
+
 				</tr></table></center><br>
 			</div>
 			<div class="frame1">  <!-- MainLine Production-->
