--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -149,7 +149,8 @@
 										<li><a href="{{request.session.local_toggle}}/matrix_update_v2">Matrix Update</a></li> -->
 										<li><a href="{{request.session.local_toggle}}/tracking">TRACK</a></li>
 										<li><a href="{{request.session.local_toggle}}/training_matrix3">Matrix</a></li>
-										<!-- <li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
+										<li><a href="{{request.session.local_toggle}}/place_test">Clear All Session Variables</a></li>
+										<!--
 										<li class="dropdown-submenu">
 											<a href="#" class="dropdown-toggle" data-toggle="dropdown">Excel Dump</a>
 											<ul class="dropdown-menu"  style="background-color:rgb(202, 230, 127);">
