updated track colors for 9341

--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -524,7 +524,7 @@
 					<td bgcolor="#EC7371"><br><center><font style="font-weight:bolder;font-size:75%;">> 0%</font></center><br></td>
 				</tr></table></center>
 				<center><table id="legend"><tr> <!-- OP80 -->
-					<td bgcolor="#B7B7B7"><br><center><font style="font-weight:bolder;font-size:75%;">0%</font></center><br></td>
+					<td bgcolor="#FF0400"><br><center><font style="font-weight:bolder;font-size:75%;">0%</font></center><br></td>
 				</tr></table></center>
 
 			</div>
