added 10R60 OP50 and OP40 tracking along with 1824 machine

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -18,6 +18,10 @@
 		function R0455(){location.replace("{{request.session.local_toggle}}/chart2_0455")}
 		function L045530(){location.replace("{{request.session.local_toggle}}/chart1_0455_OP30")}
 		function R045530(){location.replace("{{request.session.local_toggle}}/chart2_0455_OP30")}
+		function L045540(){location.replace("{{request.session.local_toggle}}/chart1_0455_OP40")}
+		function R045540(){location.replace("{{request.session.local_toggle}}/chart2_0455_OP40")}
+		function L045550(){location.replace("{{request.session.local_toggle}}/chart1_0455_OP50")}
+		function R045550(){location.replace("{{request.session.local_toggle}}/chart2_0455_OP50")}
 		function L1467(){location.replace("{{request.session.local_toggle}}/chart1_1467")}
 		function R1467(){location.replace("{{request.session.local_toggle}}/chart2_1467")}
 		function L3050(){location.replace("{{request.session.local_toggle}}/chart1_3050")}
@@ -392,6 +396,10 @@
 </td></tr><tr><td>
 	<button onclick="L045530()">Left</button></td><td>  (0455 OP30) </td><td> <button onclick="R045530()">Right</button>
 </td></tr><tr><td>
+	<button onclick="L045540()">Left</button></td><td>  (0455 OP40) </td><td> <button onclick="R045540()">Right</button>
+	</td></tr><tr><td>
+	<button onclick="L045550()">Left</button></td><td>  (0455 OP50) </td><td> <button onclick="R045550()">Right</button>
+	</td></tr><tr><td>
 	<button onclick="L521430()">Left</button> </td><td> (5214 OP30) </td><td> <button onclick="R521430()">Right</button>
 </td></tr><tr><td>
 	<button onclick="L321430()">Left</button> </td><td> (3214 OP30)</td><td>  <button onclick="R321430()">Right</button>
