update on main week monitoring

--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -119,6 +119,9 @@
 		.body3{color:black;text-align:center;background:rgb(199, 187, 166);float:left;width:33%;border: .4px solid rgb(0, 0, 0)}
 		.body3h{color:black;text-align:center;background:rgb(187, 186, 184);float:left;width:33%;border: .4px solid rgb(0, 0, 0)}
 		.body3t{color:black;text-align:center;background:rgb(187, 186, 184);float:left;font-size:medium;width:99%;border: .4px solid rgb(0, 0, 0)}
+
+		.frameA {color:black;text-align:center;float:left;width:85%;margin-bottom: 5px;}
+		
 	</style>
 
 <!-- Table format for 24hrs-->
@@ -255,10 +258,11 @@
 
                     <li><a href="{{request.session.local_toggle}}/mgmt"><span class="glyphicon glyphicon-home"></span> Main</a></li>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-
+					
                     <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-stats"></span> Production<b class="caret"></b></a>
                          <ul class="dropdown-menu multi-level"  style="background-color:rgb(245, 237, 219)" >
-                            <li><a href="#">Production Reports</a></li>
+                            <li><a href="{{request.session.local_toggle}}/mgmt_track_week">Track the Week</a></li>
+							<li><a href="#">Production Reports</a></li>
                              <li class="divider"   style="background-color:rgb(192, 178, 178)" ></li> 
                             <li><a href="{{request.session.local_toggle}}/mgmt_production">Production Entries</a></li>
                             <li><a href="{{request.session.local_toggle}}/mgmt_production_hourly">Hourly Entries</a></li>
