--- a/trakberry/templates/mgmt.html
+++ b/trakberry/templates/mgmt.html
@@ -120,7 +120,7 @@
 		.body3h{color:black;text-align:center;background:rgb(187, 186, 184);float:left;width:33%;border: .4px solid rgb(0, 0, 0)}
 		.body3t{color:black;text-align:center;background:rgb(187, 186, 184);float:left;font-size:medium;width:99%;border: .4px solid rgb(0, 0, 0)}
 
-		.frameA {color:black;text-align:center;float:left;width:85%;margin-bottom: 5px;}
+		.frameA {color:black;text-align:center;float:left;width:95%;margin-bottom: 5px;}
 		
 	</style>
 
@@ -135,10 +135,31 @@
 		border: 1px solid rgb(136, 134, 134);
 		padding: 8px;
 	}
-	#prod24 tr:nth-child(even){background-color: #f8e996;}
-	#prod24 tr:nth-child(odd){background-color: #e2cc4e;}
+	#prod24 tr:nth-child(even){background-color: #E6E2E1;}
+	#prod24 tr:nth-child(odd){background-color: #C4C4C4;}
 	#prod24 tr:hover {background-color: #ddd;}
 	#prod24 th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 128, 107);
+		color: white;
+	}
+	</style>
+<style>
+	#planB {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 100%;
+	}
+	#planB td, #planB th {
+		border: 1px solid rgb(136, 134, 134);
+		padding: 1px;
+	}
+	#planB tr:nth-child(even){background-color: #E6E2E1;}
+	#planB tr:nth-child(odd){background-color: #C4C4C4;}
+	#planB tr:hover {background-color: #ddd;}
+	#planB th {
 		padding-top: 12px;
 		padding-bottom: 12px;
 		text-align: left;
