--- a/trakberry/templates/cell_track_9341.html
+++ b/trakberry/templates/cell_track_9341.html
@@ -141,6 +141,7 @@
 
 	<style type="text/css">
 		.mainset{color:black;text-align:center;float:left;width:95%}
+		.mainset2{color:black;text-align:center;float:left;width:74%}
 		.wrapper_main {background:chartreuse;width:90%;margin-left: 10px;}
 		
 		.frame1 {color:black;text-align:center;float:left;width:32%;margin-bottom: 5px;}
@@ -263,6 +264,29 @@
 		color: white;
 	}
 	</style>
+<style>
+	#prodwk2 {
+		font-family: Arial, Helvetica, sans-serif;
+		border-collapse: collapse;
+		width: 70%;
+	}
+	#prodwk2 td, #prodwk2 th {
+		border: 1px solid rgb(0, 0, 0);
+		border-radius: 10px;
+
+		padding: 8px;
+	}
+	#prodwk2 tr:nth-child(even){background-color: #f8ce96;}
+	#prodwk2 tr:nth-child(odd){background-color: #e29d4e;}
+	#prodwk2 tr:hover {background-color: #ddd;}
+	#prodwk2 th {
+		padding-top: 12px;
+		padding-bottom: 12px;
+		text-align: left;
+		background-color: rgb(139, 117, 107);
+		color: white;
+	}
+	</style>
 
 <style>
 	#prodpast {
@@ -329,8 +353,8 @@
 
 <br>
 		<div class="wrapper_main">
-			<div class="mainset">  <!-- MainLine Production-->
-				<center><table id="prodwk"><tr> <!-- OP60 -->
+			<div class="mainset2">  <!-- MainLine Production-->
+				<center><table id="prodwk2"><tr> <!-- OP60 -->
 					<td bgcolor="#DCDCDC">
 
 <!-- Put the History Date Call up section here *************************************************************************** -->
