working on min button for week plan

--- a/trakberry/templates/mgmt_track_week.html
+++ b/trakberry/templates/mgmt_track_week.html
@@ -25,13 +25,13 @@
             {% if i.7 = -1 %}
               {% if i.5 = -1 %}
                 <tr>
-                 <td bgcolor="#E6E2E1"><center><b>{{i.1}}</b></center></td>
+                 <td bgcolor="#E6E2E1"><center><b>{{i.1}}({{i.12}})</b></center></td>
                  <td bgcolor="#E6E2E1"><center><b>{{i.2}}</b></center></td>
                 </tr>
               {% else %}
                 <tr>
                     <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.11}}</b></center></td>
-                    <td bgcolor="#E6E2E1"><center><b>{{i.1}}</b></center></td>
+                    <td bgcolor="#E6E2E1"><center><b>{{i.1}}({{i.12}})</b></center></td>
                     <td bgcolor="#E6E2E1"><center><b>{{i.2}}</b></center></td>
                     {% if i.4 > 0 %}
                         <td  bgcolor="#E6E2E1" rowspan = {{i.4}}><center><b>{{i.0}}</b></center></td>
@@ -51,13 +51,13 @@
                 {% else %}
                 {% if i.5 = -1 %}
                 <tr>
-                    <td bgcolor="#C4C4C4"><center><b>{{i.1}}</b></center></td>
+                    <td bgcolor="#C4C4C4"><center><b>{{i.1}}({{i.12}})</b></center></td>
                     <td bgcolor="#C4C4C4"><center><b>{{i.2}}</b></center></td>
                    </tr>
                  {% else %}
                    <tr>
                        <td  bgcolor="#C4C4C4" rowspan = {{i.4}}><center><b>{{i.11}}</b></center></td>
-                       <td bgcolor="#C4C4C4"><center><b>{{i.1}}</b></center></td>
+                       <td bgcolor="#C4C4C4"><center><b>{{i.1}}({{i.12}})</b></center></td>
                        <td bgcolor="#C4C4C4"><center><b>{{i.2}}</b></center></td>
                        {% if i.4 > 0 %}
                            <td  bgcolor="#C4C4C4" rowspan = {{i.4}}><center><b>{{i.0}}</b></center></td>
